implementations/java/javacc/src/WaebricParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. WaebricParser.java */
@SuppressWarnings("all")
public class WaebricParser/*@bgen(jjtree)*/implements WaebricParserTreeConstants, WaebricParserConstants {/*@bgen(jjtree)*/
  protected static JJTWaebricParserState jjtree = new JJTWaebricParserState();public static void main(String args[]) {
    System.out.println("Reading from standard input...");
    System.out.print("Enter a Waebric FunctionDef :");
    new WaebricParser(System.in);
    try {
      SimpleNode n = WaebricParser.Modules();
      n.dump("");
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

/* GENERIC */
  static final public SimpleNode Modules() throws ParseException {
                      /*@bgen(jjtree) Modules */
  SimpleNode jjtn000 = new SimpleNode(JJTMODULES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MODULE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Module();
      }
      jj_consume_token(SEMICOLON);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Module() throws ParseException {
                 /*@bgen(jjtree) Module */
  SimpleNode jjtn000 = new SimpleNode(JJTMODULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODULE);
      jj_consume_token(ModuleId);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
        case SITE:
        case DEF:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        ModuleElement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ModuleElement() throws ParseException {
                        /*@bgen(jjtree) ModuleElement */
  SimpleNode jjtn000 = new SimpleNode(JJTMODULEELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        Import();
        break;
      case SITE:
        Site();
        break;
      case DEF:
        FunctionDef();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// ModuleElement Import 
// *********************************************
  static final public void Import() throws ParseException {
                 /*@bgen(jjtree) Import */
  SimpleNode jjtn000 = new SimpleNode(JJTIMPORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
      jj_consume_token(ModuleId);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// ModuleElement Site
// *********************************************
  static final public void Site() throws ParseException {
               /*@bgen(jjtree) Site */
  SimpleNode jjtn000 = new SimpleNode(JJTSITE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SITE);
      Mappings();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Mappings() throws ParseException {
                   /*@bgen(jjtree) Mappings */
  SimpleNode jjtn000 = new SimpleNode(JJTMAPPINGS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FileName:
        case DirName:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        Mapping();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Mapping() throws ParseException {
                  /*@bgen(jjtree) Mapping */
  SimpleNode jjtn000 = new SimpleNode(JJTMAPPING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Path();
      jj_consume_token(COLON);
      Markup();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Path() throws ParseException {
               /*@bgen(jjtree) Path */
  SimpleNode jjtn000 = new SimpleNode(JJTPATH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FileName:
        jj_consume_token(FileName);
        break;
      case DirName:
        jj_consume_token(DirName);
        jj_consume_token(FileName);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// ModuleElement FunctionDef
// *********************************************
  static final public void FunctionDef() throws ParseException {
                     /*@bgen(jjtree) FunctionDef */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCTIONDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DEF);
      jj_consume_token(IdCon);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        Formals();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case EACH:
        case LET:
        case YIELD:
        case COMMENT:
        case ECHO:
        case CDATA:
        case LBRACE:
        case IdCon:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Formals() throws ParseException {
                  /*@bgen(jjtree) Formals */
  SimpleNode jjtn000 = new SimpleNode(JJTFORMALS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAREN);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IdCon:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(IdCon);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
      }
      jj_consume_token(RPAREN);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Statement() throws ParseException {
                    /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_3(8)) {
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        Predicate();
        jj_consume_token(RPAREN);
        Statement();
        jj_consume_token(ELSE);
        Statement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          jj_consume_token(IF);
          jj_consume_token(LPAREN);
          Predicate();
          jj_consume_token(RPAREN);
          Statement();
          break;
        case EACH:
          jj_consume_token(EACH);
          jj_consume_token(LPAREN);
          Var();
          jj_consume_token(COLON);
          Expression();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
            DotIdCon();
            break;
          default:
            jj_la1[10] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
          Statement();
          break;
        case LET:
          jj_consume_token(LET);
          label_6:
          while (true) {
            Assignment();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IdCon:
              ;
              break;
            default:
              jj_la1[11] = jj_gen;
              break label_6;
            }
          }
          jj_consume_token(IN);
          label_7:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IF:
            case EACH:
            case LET:
            case YIELD:
            case COMMENT:
            case ECHO:
            case CDATA:
            case LBRACE:
            case IdCon:
              ;
              break;
            default:
              jj_la1[12] = jj_gen;
              break label_7;
            }
            Statement();
          }
          jj_consume_token(END);
          break;
        case LBRACE:
          jj_consume_token(LBRACE);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IF:
            case EACH:
            case LET:
            case YIELD:
            case COMMENT:
            case ECHO:
            case CDATA:
            case LBRACE:
            case IdCon:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_8;
            }
            Statement();
          }
          jj_consume_token(RBRACE);
          break;
        case YIELD:
          jj_consume_token(YIELD);
          jj_consume_token(SEMICOLON);
          break;
        case COMMENT:
          jj_consume_token(COMMENT);
          jj_consume_token(StrCon);
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[21] = jj_gen;
          if (jj_2_4(2)) {
            jj_consume_token(ECHO);
            Expression();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case DOT:
              DotIdCon();
              break;
            default:
              jj_la1[14] = jj_gen;
              ;
            }
            jj_consume_token(SEMICOLON);
          } else if (jj_2_5(2)) {
            jj_consume_token(ECHO);
            Embedding();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case DOT:
              DotIdCon();
              break;
            default:
              jj_la1[15] = jj_gen;
              ;
            }
            jj_consume_token(SEMICOLON);
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case CDATA:
              jj_consume_token(CDATA);
              Expression();
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case DOT:
                DotIdCon();
                break;
              default:
                jj_la1[16] = jj_gen;
                ;
              }
              jj_consume_token(SEMICOLON);
              break;
            case IdCon:
              label_9:
              while (true) {
                Markup();
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case IdCon:
                  ;
                  break;
                default:
                  jj_la1[17] = jj_gen;
                  break label_9;
                }
              }
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case SEMICOLON:
                jj_consume_token(SEMICOLON);
                break;
              default:
                jj_la1[19] = jj_gen;
                if (jj_2_1(2)) {
                  Statement();
                } else if (jj_2_2(2)) {
                  Expression();
                  switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                  case DOT:
                    DotIdCon();
                    break;
                  default:
                    jj_la1[18] = jj_gen;
                    ;
                  }
                  jj_consume_token(SEMICOLON);
                } else {
                  switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                  case PreText:
                    Embedding();
                    jj_consume_token(SEMICOLON);
                    break;
                  default:
                    jj_la1[20] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                  }
                }
              }
              break;
            default:
              jj_la1[22] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Predicate() throws ParseException {
                    /*@bgen(jjtree) Predicate */
  SimpleNode jjtn000 = new SimpleNode(JJTPREDICATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(2)) {
        Expression();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          DotIdCon();
          break;
        default:
          jj_la1[23] = jj_gen;
          ;
        }
      } else if (jj_2_7(2147483647)) {
        jj_consume_token(DOT);
        jj_consume_token(Type);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Assignment() throws ParseException {
                     /*@bgen(jjtree) Assignment */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_8(2)) {
        jj_consume_token(IdCon);
        Formals();
        jj_consume_token(ASSIGN);
        Statement();
      } else if (jj_2_9(2)) {
        Var();
        jj_consume_token(ASSIGN);
        Expression();
        jj_consume_token(SEMICOLON);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Embedding() throws ParseException {
                    /*@bgen(jjtree) Embedding */
  SimpleNode jjtn000 = new SimpleNode(JJTEMBEDDING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PreText);
      Embed();
      TextTail();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Embed() throws ParseException {
                /*@bgen(jjtree) Embed */
  SimpleNode jjtn000 = new SimpleNode(JJTEMBED);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IdCon:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_10;
        }
        Markup();
      }
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        DotIdCon();
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void TextTail() throws ParseException {
                   /*@bgen(jjtree) TextTail */
  SimpleNode jjtn000 = new SimpleNode(JJTTEXTTAIL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PostText:
        jj_consume_token(PostText);
        break;
      case MidText:
        jj_consume_token(MidText);
        Embed();
        TextTail();
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// Used by both the Site and FunctionDef ModuleElements
// *********************************************
  static final public void Markup() throws ParseException {
                 /*@bgen(jjtree) Markup */
  SimpleNode jjtn000 = new SimpleNode(JJTMARKUP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Designator();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        Arguments();
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Designator() throws ParseException {
                     /*@bgen(jjtree) Designator */
  SimpleNode jjtn000 = new SimpleNode(JJTDESIGNATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IdCon);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COLON:
        case DOT:
        case DOLLAR_SIGN:
        case NUMBER_SIGN:
        case AT:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_11;
        }
        Attribute();
      }
